--- a/spark_deployment.yml
+++ b/spark_deployment.yml
@@ -27,9 +27,10 @@
       - default-jre
       - default-jdk
  
- 
    - name: download spark
-     unarchive: src= {{spark_urls}} dest=/usr/local/ copy=no
+     unarchive: src={{item}} dest=/usr/local/ copy=no 
+     with_items: "{{spark_urls}}"  
+   - debug:
      
      #unarchive: src={{item}} dest=/usr/local/ copy=no
      #with_items:
@@ -37,12 +38,12 @@
      # - http://downloads.lightbend.com/scala/2.11.8/scala-2.11.8.tgz
 
    - name: adding paths
-     lineinfile: dest={{rc_file}} line='export PATH=$PATH:{{spark_home}}/bin/:{{scala_home}}/bin\nexport JAVA_HOME={{java_home}}\nSPARK_HOME={{spark_home}}' insertafter='EOF' regexp='export PATH=\$SPARK_HOME' state=present 
+     lineinfile: dest="{{rc_file}}" line='export PATH=$PATH:{{spark_home}}/bin/:{{scala_home}}/bin\nexport JAVA_HOME={{java_home}}\nSPARK_HOME={{spark_home}}' insertafter='EOF' regexp='export PATH=\$SPARK_HOME' state=present 
 
      #lineinfile: dest=/home/ubuntu/.bashrc line='export PATH=$PATH:/usr/local/spark-1.6.1-bin-hadoop2.6/bin/:/usr/local/scala-2.11.8/bin\nexport JAVA_HOME=/usr/lib/jvm/java-7-openjdk-amd64\nSPARK_HOME=/usr/local/spark-1.6.1-bin-hadoop2.6' insertafter='EOF' regexp='export PATH=\$SPARK_HOME' state=present 
    
    - name: source bashrc   
-     shell: . /home/ubuntu/.bashrc
+     shell: . "{{rc_file}}"
 
    - name: R repo key
      apt_key: keyserver=keyserver.ubuntu.com id=E084DAB9
