--- a/spark_deployment.yml
+++ b/spark_deployment.yml
@@ -1,23 +1,18 @@
-- hosts: sparkmaster
-  tasks:
-   - name: master hostnsme
-     hostname: name=sparkmaster
-
-- hosts: sparkworker
-  tasks:
-   - hostname: name=sparkworker 
-   
 - hosts: all
   tasks:
 
    - name: Generate hosts file
      lineinfile: dest=/etc/hosts
-                 regexp='.*{{ item }}$i'
+                 regexp='.*{{ item }}$'
                  line="{{ hostvars[item].ansible_default_ipv4.address }} {{item}}"
                  state=present            
      when: hostvars[item].ansible_default_ipv4.address is defined
-     with_items: groups['all']
+     with_items: "{{groups['all']}}"
    
+   - name: Set hostname
+     hostname: name="{{inventory_hostname}}"
+   
+   - name: Include variables
    - include_vars: setup_var.yml 
 
    - name: apt update
@@ -32,7 +27,6 @@
    - name: download spark
      unarchive: src={{item}} dest=/usr/local/ copy=no 
      with_items: "{{spark_urls}}"  
-   - debug:
      
      #unarchive: src={{item}} dest=/usr/local/ copy=no
      #with_items:
@@ -136,8 +130,14 @@
    - name: start jupyter
      shell: nohup jupyter notebook --ip=* --port=60060 &
 
+   - name: disable IPv6
+     shell: {{item}}
+     with_items: 
+      - echo "net.ipv6.conf.all.disable_ipv6 = 1\nnet.ipv6.conf.default.disable_ipv6 = 1\nnet.ipv6.conf.lo.disable_ipv6 = 1" >> /etc/sysctl.conf
+      - sysctl -p
+
    - name: start spark master process
-     shell: nohup {{spark_home}}/sbin/start-master.sh &
+     shell: nohup {{spark_home}}/sbin/start-master.sh  &
 
 - hosts: sparkworker
     
@@ -145,5 +145,11 @@
    - setup_var.yml
 
   tasks:
+   - name: disable IPv6
+     shell: {{item}}
+      with_items:
+       - echo "net.ipv6.conf.all.disable_ipv6 = 1\nnet.ipv6.conf.default.disable_ipv6 = 1\nnet.ipv6.conf.lo.disable_ipv6 = 1" >> /etc/sysctl.conf
+       - sysctl -p
+ 
    - name: start spark worker process
      shell: nohup {{spark_home}}/sbin/start-slave.sh spark://sparkmaster:7077 &
