--- a/spark_deployment.yml
+++ b/spark_deployment.yml
@@ -131,7 +131,7 @@
      shell: nohup jupyter notebook --ip=* --port=60060 &
 
    - name: disable IPv6
-     shell: {{item}}
+     shell: "{{item}}"
      with_items: 
       - echo "net.ipv6.conf.all.disable_ipv6 = 1\nnet.ipv6.conf.default.disable_ipv6 = 1\nnet.ipv6.conf.lo.disable_ipv6 = 1" >> /etc/sysctl.conf
       - sysctl -p
@@ -146,7 +146,7 @@
 
   tasks:
    - name: disable IPv6
-     shell: {{item}}
+     shell: "{{item}}"
       with_items:
        - echo "net.ipv6.conf.all.disable_ipv6 = 1\nnet.ipv6.conf.default.disable_ipv6 = 1\nnet.ipv6.conf.lo.disable_ipv6 = 1" >> /etc/sysctl.conf
        - sysctl -p
