--- a/spark_deployment.yml
+++ b/spark_deployment.yml
@@ -13,7 +13,7 @@
      hostname: name="{{inventory_hostname}}"
    
    - name: Include variables
-   - include_vars: setup_var.yml 
+     include_vars: setup_var.yml 
 
    - name: apt update
      apt: update_cache=yes upgrade=dist
@@ -147,9 +147,9 @@
   tasks:
    - name: disable IPv6
      shell: "{{item}}"
-      with_items:
-       - echo "net.ipv6.conf.all.disable_ipv6 = 1\nnet.ipv6.conf.default.disable_ipv6 = 1\nnet.ipv6.conf.lo.disable_ipv6 = 1" >> /etc/sysctl.conf
-       - sysctl -p
+     with_items:
+      - echo "net.ipv6.conf.all.disable_ipv6 = 1\nnet.ipv6.conf.default.disable_ipv6 = 1\nnet.ipv6.conf.lo.disable_ipv6 = 1" >> /etc/sysctl.conf
+      - sysctl -p
  
    - name: start spark worker process
      shell: nohup {{spark_home}}/sbin/start-slave.sh spark://sparkmaster:7077 &
